--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="phone-screen" id="screen">
 <div class="top" id="top-bar"><div class="top-notch"><div id="cam"></div></div></div>
 <div id="profile">
-<div class="display"> <img src="./images/Karan.png" style="background-color:#FF4155 ;" class="icon"> &nbsp; <h3>Karan</h3></div>
+<div class="display"> <img src="./images/karan.png" class="icon r-img"> &nbsp; <h3>Karan</h3></div>
 <br>
 <div class="box1" id="resume"><div><img src="./images/cv.png" class="pro-icon"></div><div class="text"><h3> Resume</h3></div></div><br>
 <div class="box1" id="projects"><div><img src="./images/programmer.png" class="pro-icon"></div><div class="text"><h3> Project</h3></div></div><br>
