--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Karan- mobile Portfolio</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kavivanar&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
+
 <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
@@ -34,7 +36,9 @@
  </div>
 <hr class="r-line">
 <div class="r-content">
+
 <ul class="r-list">
+<li><b><h4>Specialization</h4></b></li>
 <li>History</li>
 <li>Archaeology</li>
 <li>Osteoarchaeology</li>
@@ -47,7 +51,7 @@
 </div>
 <hr class="r-line">
 <div class="r-content">
-<h4>Follow me:</h4>
+<h4>Follow me</h4>
 <div class="r-content-row"><div><a href="https://twitter.com/karan_veiyon"><p class="r-link">Twitter &nbsp;</p></div><div><img src="./images/twitter.png" alt=""></a></div></div>
 <div class="r-content-row"><div><a href="https://www.linkedin.com/in/dhinakar-ravichandran-aaa433176/"><p class="r-link">linkedin &nbsp;</p></div><div><img src="./images/linkedin.png" alt=""></a></div></div>
 <div class="r-content-row"><div><a href="https://github.com/karanveiyon"><p class="r-link">Github &nbsp;</p></div><div><img src="./images/github (1).png"  alt=""></a></div></div>
@@ -57,21 +61,26 @@
 
 <div class="projects" id="project-div"> 
 <div class="r-top">
-    <img class="r-img" src="./images/project-management.png" > &nbsp; <h3>Projects</h3>
-</div><br>
-<h3 style="color:white ;">My Projects</h3><br>
+<img class="r-img" src="./images/project-management.png" > &nbsp;&nbsp;<h3>Projects</h3>
+</div>
+<div class="project-list">
+<h3 style="color:white ;">My Projects</h3>
 
-<div class="projects-link"><div><a href="https://karanveiyon.github.io/eluthathigaram/"><img class="p-icon" src="./images/eluthathigaram.png"></div><div class="p-topic"><h5>எழுத்ததிகாரம்</h5></div></div>
+<div class="projects-link"><div><a href="https://karanveiyon.github.io/eluthathigaram/"><img class="p-icon" src="./images/eluthathigaram.png"></div><div class="p-topic"><h5 class="pro-title">எழுத்ததிகாரம்</h5></div></div>
 </a>
-
-<div class="projects-link"><div><a href="https://karanveiyon.github.io/kanakkadhigaram/"><img class="p-icon" src="./images/kanakkadhigaram (2).png"></div><div class="p-topic"><h5>கணக்கதிகாரம்</h5></div></div>
+<div class="projects-link"><div><a href="https://karanveiyon.github.io/kanakkadhigaram/"><img class="p-icon" src="./images/kanakkadhigaram (2).png"></div><div class="p-topic"><h5 class="pro-title">கணக்கதிகாரம்</h5></div></div>
 </a>
-
-<div class="projects-link"><div><a href="https://karanveiyon.github.io/DMS-to-Decimal/"><img class="p-icon" src="./images/ulagalandhan kol.png"></div><div class="p-topic"><h5>உலகளந்தான் கோல்</h5></div></div>
+<div class="projects-link"><div><a href="https://karanveiyon.github.io/DMS-to-Decimal/"><img class="p-icon" src="./images/ulagalandhan kol.png"></div><div class="p-topic"><h5 class="pro-title">உலகளந்தான் கோல்</h5></div></div>
 </a>
 </div>
+</div>
+<div class="footer-menu" id="footer-menu">
+    <div><img  class="menu-icon" src="./images/telephone.png"></div>
+    <div><img  class="menu-icon" src="./images/sms.png"></div>
+    <div><img  class="menu-icon" src="./images/music-note.png"></div>
+    <div><img  class="menu-icon" src="./images/photo-camera.png"></div>
 
-
+</div>
 <div class="menu-toggle">
 <span class="menu" id="back">&#9664</span>
 <span class="menu">&#11044</span>
