--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 </div>
 <div class="menu-toggle">
 <span class="menu" id="back">&#9664</span>
-<span class="menu">&#11044</span>
-<span class="menu">&#11036</span>
+<span class="menu" id="menu-home" >&#11044</span>
+<span class="menu" id="menu-back">&#11036</span>
 </div>
 </div>  
 <script src="./scripts/script.js"></script>
